--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,7 @@
 								<jsSourceFile>deferredscript.unminified.js</jsSourceFile>
 								<jsSourceFile>unload.unminified.js</jsSourceFile>
 								<jsSourceFile>push.unminified.js</jsSourceFile>
+								<jsSourceFile>inputfile.unminified.js</jsSourceFile>
 							</jsSourceFiles>
 							<jsFinalFile>omnifaces.js</jsFinalFile>
 						</configuration>
