--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,7 @@
 						<configuration>
 							<jsSourceFiles>
 								<jsSourceFile>omnifaces.unminified.js</jsSourceFile>
+								<jsSourceFile>util.unminified.js</jsSourceFile>
 								<jsSourceFile>unload.unminified.js</jsSourceFile>
 							</jsSourceFiles>
 							<jsFinalFile>unload.js</jsFinalFile>
