--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: java
 jdk:
    - oraclejdk8
 
+env:
+   - SERVER = wildfly
+
+script: mvn clean verify -P test-$SERVER
+
 deploy:
    provider: script
    script: mvn deploy -Dmaven.test.skip -s settings.xml
