--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ jdk:
    - oraclejdk8
 
 env:
-   - SERVER = wildfly
+   - SERVER = test-wildfly
 
-script: mvn clean verify -P test-$SERVER
+script: mvn verify -P $SERVER
 
 deploy:
    provider: script
