--- a/pom.xml
+++ b/pom.xml
@@ -191,7 +191,7 @@
 				</configuration>
 				<executions>
 					<execution>
-						<phase>compile</phase>
+						<phase>process-sources</phase>
 						<goals>
 							<goal>format</goal>
 						</goals>
