Add integration test for @Startup with @EJB This should prevent mistakes like https://github.com/omnifaces/omnifaces/commit/46ea477

--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,12 @@
 
 		<!-- Test dependencies.	-->
 		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-web-api</artifactId>
+			<version>${javaee.version}.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
