--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ script: mvn verify -P $SERVER
 deploy:
    provider: script
    script: mvn deploy -Dmaven.test.skip -s settings.xml
+   skip_cleanup: true
    on:
       branch: develop
       condition: "$SERVER = wildfly"
